--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,8 @@ MARGINS AND PADDING: incremented by 5. Always check and build on what is already
 }
 body {
   margin: 0;
-  background-color: #60C2F4;
+  background-color: #eeeeee;
+  /* min-width: 320px; */
 }
 
 main {
@@ -33,7 +34,10 @@ h1 {
   background-color: #fff;
   padding: 20px 0;
 }
-
+ul,li{
+  margin: 0;
+  padding: 0;
+}
 /*Menu*/
 
 header {
@@ -201,6 +205,51 @@ input[type='submit'] {
 /*Footer*/
 
 
+/* My Page */
+div.mypage-container{
+  margin: 200px auto 0 auto;
+  max-width: 400px;
+  height: auto;
+  overflow: hidden;
+}
+
+/* My Page Options  */
+ul.mypagelink{
+  width: 700px;
+  overflow: hidden;
+}
+ul.mypagelink>li{
+  float: left;
+  width: 100px;
+  height: 100px;
+  padding: 30px 0;
+  box-sizing: border-box;
+  margin-left: 20px;
+  background-color: #1B9CE5;
+  text-align: center;
+  border-radius: 2px;
+  box-shadow: 1px 1px rgba(51,51,51, 0.2);
+}
+ul.mypagelink>li:first-child{
+  margin-left: none;
+}
+
+/* My Page Latest News */
+div.mypagelatest-container{
+  margin: 60px auto 0 auto;
+  padding: 25px;
+  width: 100%;
+  max-width: 400px;
+  height:auto;
+}
+ul.latest{}
+li.latest-item{
+  background-color: #eeeeee;
+  border-radius: 2px;
+  border-left: 2px #333333;
+  padding: 15px;
+
+}
 /*=====================================TABLET: 640PX========================================*/
 
 @media (min-width: 640px) {
