--- a/css/main.css
+++ b/css/main.css
@@ -191,15 +191,15 @@ input[type='submit'] {
   opacity: 0;
   width: 80%;
   margin: 0 auto;
-  height: 0;
-  will-change: height, opacity;
-  transition: height 0.2s ease-in-out, opacity 0.2s ease-in-out;
+  max-height: 0;
+  will-change: max-height, opacity;
+  transition: max-height 0.2s ease-in-out, opacity 0.2s ease-in-out;
 }
 
 .reg_content.active {
   visibility: visible;
   opacity: 1;
-  height: 300px;
+  max-height: 1000px;
 }
 
 /*Footer*/
