--- a/css/main.css
+++ b/css/main.css
@@ -209,7 +209,7 @@ input[type='text'].error {
   margin: 0;
 }
 
-.reg_step button {
+.regstep_button, .nextstep, .prevstep {
   width: 100%;
   background-color: #eee;
   border: none;
@@ -218,7 +218,7 @@ input[type='text'].error {
   cursor: pointer;
 }
 
-.regstep_button.active {
+.reg_step.active .regstep_button {
   background-color: #60C2F4;
   color: #fff;
 }
@@ -234,11 +234,27 @@ input[type='text'].error {
   transition: max-height 0.1s ease-in-out, opacity 0.6s ease-in-out, margin 0.2s ease-in-out;
 }
 
-.reg_content.active {
+.reg_step.active .reg_content {
   visibility: visible;
   opacity: 1;
   max-height: 1000px;
   margin: 55px auto;
+}
+
+/*loading wheel taken from https://www.w3schools.com/howto/howto_css_loader.asp 23/5-2018*/
+.loader {
+    border: 5px solid #ccc; /*  grey */
+    border-top: 5px solid #60C2F4; /* Blue */
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    margin: 40px auto;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
 
 /*Footer*/
