--- a/css/main.css
+++ b/css/main.css
@@ -30,10 +30,12 @@ h1 {
 
 h3 {
   margin: 0;
+  font-size:12pt;
 }
 
 p {
   margin: 0;
+  font-size:10pt;
 }
 
 #loginbox {
@@ -235,7 +237,6 @@ input[type='text'].error {
   color: #fff;
 }
 
-
 .reg_content {
   visibility: hidden;
   opacity: 0;
@@ -308,9 +309,6 @@ div.confirm_button{
     100% { transform: rotate(360deg); }
 }
 
-/*Footer*/
-
-
 /* My Page */
 
 /* @FREDRIK */
@@ -349,6 +347,7 @@ div.mypagelink-container{
   position: relative;
   width: 100%;
 }
+
 /* My page icons */
 i.fas.fa-angle-left{
   position: absolute;
@@ -357,6 +356,7 @@ i.fas.fa-angle-left{
   font-size: 26px;
   z-index: 10;
 }
+
 i.fas.fa-angle-right{
   position: absolute;
   top: calc(50% - 13px);
@@ -364,7 +364,6 @@ i.fas.fa-angle-right{
   font-size: 26px;
   z-index: 10;
 }
-
 
 
 /* @FREDRIK */
@@ -375,7 +374,9 @@ ul.mypagelink{
   /* transform: translateX(0px);
 } */
 
-
+ul.mypagelink>a {
+  font-size:12pt;
+}
 
 ul.mypagelink>a>li{
   float: left;
@@ -398,8 +399,7 @@ div.mypagelatest-container{
   max-width: 400px;
   height:auto;
 }
-ul.latest{
-}
+
 li.latest-item{
   background-color: white;
   border-radius: 2px;
@@ -407,16 +407,17 @@ li.latest-item{
   padding: 15px;
   margin-top: 15px;
   opacity: 1;
+  width:300px;
 }
 
-
-
-
+.mypage-container h4 {
+  width:300px;
+}
 
 .eLearning h3 {
   float:left;
   display:inline-block;
-  width:280px;
+  width:200px;
 }
 
 .eLearning p {
@@ -426,9 +427,9 @@ li.latest-item{
 .trash {
   float:left;
   display:inline-block;
-  width:30px;
-  height:30px;
-  margin-top:15px;
+  width:20px;
+  height:20px;
+  margin-top:0px;
 }
 
 li.bookmarks1{
@@ -442,6 +443,18 @@ li.bookmarks1{
 
   main {
     margin-top: 140px;
+  }
+
+  h3 {
+    font-size:14pt;
+  }
+
+  p {
+    font-size:12pt;
+  }
+
+  ul.mypagelink>a {
+    font-size:14pt;
   }
 
   #loginbox {
@@ -477,23 +490,44 @@ div.mypagelatest-container{
     padding:0px;
   }
 
+  .mypage-container h4 {
+    width:600px;
+  }
+
 .eLearning h3 {
     width:500px;
   }
 
-.arrow-left {
-  display:none;
+.trash {
+    width:30px;
+    height:30px;
 }
 
-.arrow-right {
-  display:none;
+li.latest-item{
+  width:600px;
+  padding:20px;
 }
+
+
+
 }
 
 /*=====================================DESKTOP: 960PX========================================*/
 
 @media (min-width: 960px) {
 
+
+h3,h4 {
+  font-size:16pt;
+  }
+
+p {
+  font-size:14pt;
+  }
+
+ul.mypagelink>a {
+  font-size:16pt;
+  }
 
 #logocontainer {
   margin-top: 3px;
@@ -504,12 +538,12 @@ div.mypagelatest-container{
   height: 50px;
 }
 
-  nav#main-menu {
-    padding: 20px 50px;
-    height: auto;
+nav#main-menu {
+  padding: 20px 50px;
+  height: auto;
   }
 
-  #menu-item-container {
+#menu-item-container {
     visibility: visible;
     opacity: 1;
     height: auto;
@@ -519,11 +553,11 @@ div.mypagelatest-container{
     max-width: 1000px;
   }
 
-  #menuicon {
+#menuicon {
     display: none;
   }
 
-  ul#menu-items {
+ul#menu-items {
     float: left;
     flex-direction: row;
     justify-content: space-between;
@@ -535,7 +569,7 @@ div.mypagelatest-container{
     max-width: 600px;
   }
 
-  #search-bar {
+#search-bar {
     float: right;
     position: static;
     width: 25%;
@@ -562,75 +596,75 @@ div.mypagelatest-container{
   left: 10%;
 }
 
+.register_steps {
+    margin: 0;
+    overflow: hidden;
+}
 
-    .register_steps {
-      margin: 0;
-      overflow: hidden;
-    }
+.reg_step {
+    width: 25%;
+    float: left;
+}
 
-    .reg_step {
-      width: 25%;
-      float: left;
-    }
+#step_1 .reg_content, #step_4 h3 {
+    margin-top: 100px;
+}
 
-    #step_1 .reg_content, #step_4 h3 {
-      margin-top: 100px;
-    }
+#step_1 select {
+    margin-bottom: 100px;
+}
 
-    #step_1 select {
-      margin-bottom: 100px;
-    }
+#step_4 p, #step_4 h3 {
+    text-align: center;
+}
 
-    #step_4 p, #step_4 h3 {
-      text-align: center;
-    }
+#step_1 .nextstep {
+    width: 50%;
+    float: none;
+}
 
-    #step_1 .nextstep {
-      width: 50%;
-      float: none;
-    }
+.buttoncontainer {
+    width: 100%;
+    margin-top: 30px;
+    overflow: hidden;
+}
 
-    .buttoncontainer {
-      width: 100%;
-      margin-top: 30px;
-      overflow: hidden;
-    }
-    .nextstep, .prevstep, input[type='submit'] {
-      width: 45%;
-      margin: 0 2%;
-      float: left;
-    }
+.nextstep, .prevstep, input[type='submit'] {
+    width: 45%;
+    margin: 0 2%;
+    float: left;
+}
 
-
-
-
-  div.mypage-container{
+div.mypage-container{
     width: 960px;
-
   }
 
-  ul.mypagelink{
-
-  }
-
-  ul.mypagelink>a>li{
+ul.mypagelink>a>li{
     width: 150px;
     height:150px;
     box-sizing: border-box;
   }
 
-  ul.mypagelink>a>li + li{
+ul.mypagelink>a>li + li{
     padding: 30px 0;
     margin-left: 40px;
   }
 
 div.mypagelatest-container{
     max-width: 800px;
+}
 
-  }
+.mypage-container h4 {
+    width:800px;
+}
+
+li.latest-item{
+    width:800px;
+    padding:20px;
+}
 
 .eLearning h3 {
     width:680px;
-  }
+}
 
 }
