fixed weirdness step 3

--- a/css/main.css
+++ b/css/main.css
@@ -596,6 +596,10 @@ ul#menu-items {
   left: 10%;
 }
 
+.reg_content p{
+  font-size: 12pt;
+}
+
 .register_steps {
     margin: 0;
     overflow: hidden;
