--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ ul#menu-items {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  height: 50vh;
+  height: 20vh;
   position: absolute;
   width: 100%;
   top: 120px;
@@ -149,6 +149,39 @@ ul li {
   border-radius: 5px;
 }
 
+/*welcome*/
+
+#welcome {
+  padding: 20px;
+}
+
+#heroimage {
+  width: 100%;
+  height: 30vh;
+  background-color: #ccc;
+  margin-top: -40px;
+}
+
+#article_area {
+  width: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+  margin-top: 20px;
+}
+
+#article_area h2 {
+  margin-left: 20px;
+}
+
+.article {
+  width: 30%;
+  height: 220px;
+  background-color: #ccc;
+  padding: 10px;
+  float: left;
+  margin: 1%;
+}
+
 /*form styling*/
 
 form h3 {
@@ -178,6 +211,36 @@ input[type='password'] {
 .buttoncontainer {
   width: 60%;
   margin: 0 auto;
+}
+
+.loginbutton {
+  width: 50%;
+  font-size: 1.2em;
+  border: none;
+  padding: 15px 30px;
+  background-color: #60C2F4;
+  color: #fff;
+  margin: 20px auto;
+  cursor: pointer;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.registercall {
+  text-align: center;
+}
+
+.registercall a {
+  width: 100%;
+  font-size: 1em;
+  border: none;
+  padding: 10px 20px;
+  background-color: #eee;
+  color: #000;
+  cursor: pointer;
+  text-transform: uppercase;
+  text-decoration: none;
+  margin-left: 20px;
 }
 
 input[type='submit'] {
@@ -269,7 +332,6 @@ input[type='text'].error {
 }
 
 #step_1 select {
-  margin-top: 40px;
   font-size: 1.5em;
   font-weight: 100;
 }
@@ -488,6 +550,24 @@ li.bookmarks1{
   #logo {
     width: 240px;
     height: 45px;
+  }
+
+  /*welcome*/
+
+  #article_area {
+    width: 75%;
+    margin-top: 40px;
+  }
+
+
+
+  .article {
+    width: 23%;
+    height: 300px;
+    background-color: #ccc;
+    padding: 10px;
+    float: left;
+    margin: 1%;
   }
 
   div.mypage-container{
